tests/ui/extern/extern-crate-visibility.stderr
error[E0603]: crate import `core` is private
  --> $DIR/extern-crate-visibility.rs:6:10
   |
LL | use foo::core::cell;
   |          ^^^^ private crate import
   |
note: the crate import `core` is defined here
  --> $DIR/extern-crate-visibility.rs:2:5
   |
LL |     extern crate core;
   |     ^^^^^^^^^^^^^^^^^^
help: consider importing this module instead
   |
LL - use foo::core::cell;
LL + use std::cell;
   |

error[E0603]: crate import `core` is private
  --> $DIR/extern-crate-visibility.rs:9:10
   |
LL |     foo::core::cell::Cell::new(0);
   |          ^^^^ private crate import
   |
note: the crate import `core` is defined here
  --> $DIR/extern-crate-visibility.rs:2:5
   |
LL |     extern crate core;
   |     ^^^^^^^^^^^^^^^^^^
help: consider importing this struct instead
   |
LL -     foo::core::cell::Cell::new(0);
LL +     std::cell::Cell::new(0);
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0603`.
